--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
-<html>
+<!DOCTYPE html>
+
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Slap Object Game</title>
-	<link rel="stylesheet" href="">
-	<link rel="stylesheet" href="">
-	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="game.css">
+
 </head>
-<body>
-	
-	<script src=""></script>
+
+<body class="container-fluid">
+	<section class="row">
+		<div class="col text-center">
+			<h2>Slap Game</h2>
+		</div>
+	</section>
+	<main class="row">
+		<div class="col">
+			<div class="row">
+				<div class="col-3"></div>
+				<div class="col-6">
+					<div class="row">
+						<div class="col d-flex justify-content-center">
+							<img class="img-fluid" src="//lorempixel.com/200/200" alt="">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col d-flex justify-content-center">
+							<button type="button" class="btn bg-dark text-white">punch</button>
+							<button type="button" class="btn bg-dark text-white">kick</button>
+							<button type="button" class="btn bg-dark text-white">slap</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-3">
+
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer class="row">
+		<div class="col"></div>
+	</footer>
+	<script src="game.js"></script>
 </body>
+
 </html>
