js refactor health bar etc

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Slap Object Game</title>
+	<link rel="shortcut icon" href="assetts/images/fav-icon.png" type="image/x-icon">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
 	 crossorigin="anonymous">
-	<link rel="stylesheet" href="game.css">
+	<link rel="stylesheet" href="assetts/game.css">
 
 </head>
 
@@ -25,6 +26,7 @@
 					<H4 id="monsterName"></H4>
 					<p>age: <span id="monsterAge"></span></p>
 					<p>health: <span id="monsterHealth"></span></p>
+					<div class="progressBar"><span></span></div>
 				</div>
 				<div class="col-6">
 					<div class="row">
@@ -53,7 +55,7 @@
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<script src="game.js"></script>
+	<script src="app/game.js"></script>
 </body>
 
 </html>
