--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div id="actions" class="col d-flex justify-content-center">
+						<div id="actions" class="col d-flex justify-content-around btn-group-sm">
 							<button id="punch" type="button" class="btn bg-dark text-white">punch</button>
 							<button id="kick" type="button" class="btn bg-dark text-white">kick</button>
 							<button id="slap" type="button" class="btn bg-dark text-white">slap</button>
@@ -60,8 +60,12 @@
 			</div>
 		</div>
 	</main>
-	<footer class="row">
-		<div class="col"></div>
+	<footer class="row my-3">
+		<div class="col d-flex justify-content-between">
+			<p>games: <span id="games">0</span></p>
+			<p>wins: <span id="wins">0</span></p>
+			<button id="reset" type="button" class=" btn btn-sm bg-dark text-white">Reset</button>
+		</div>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
