animated picture on loss

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="col-6 d-flex flex-column justify-content-end">
 					<div class="row">
 						<div class="col d-flex justify-content-end">
-							<img class="img-fluid" src="assetts/images/Bear-no background.png" alt="">
+							<img id="bearPicture" class="img-fluid" src="assetts/images/bear3s.png" alt="">
 						</div>
 					</div>
 					<div class="row">
@@ -55,7 +55,7 @@
 					<p class="text-right">experience: <span id="playerExperience"></span></p>
 					<button id="knife" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="slap">Knife</button>
 					<button id="sword" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="punch" disabled="true">Sword</button>
-					<button id="armor" class="btn bg-dark btn-sm text-white mt-2" type="button" disabled="true">Armor</button>
+					<button id="armor" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="armor" disabled="true">Armor</button>
 				</div>
 			</div>
 		</div>
