--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body class="container-fluid">
 	<section class="row">
-		<div class="col text-center">
-			<h2>Slap Game</h2>
+		<div class="col text-center py-5">
+			<h2>Slap The Bear</h2>
 		</div>
 	</section>
-	<main class="row">
-		<div class="col">
+	<main class="row custom-height ">
+		<div class="col d-flex flex-column justify-content-end">
 			<div class="row">
 				<div class="col-3 text-left">
 					<h3>Monster</h3>
@@ -33,7 +33,7 @@
 				</div>
 				<div class="col-6 d-flex flex-column justify-content-end">
 					<div class="row">
-						<div class="col d-flex justify-content-end">
+						<div class="col d-flex justify-content-center">
 							<img id="bearPicture" class="img-fluid" src="assetts/images/bear3s.png" alt="">
 						</div>
 					</div>
