final first build commit

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 					</div>
 					<p class="text-right">experience: <span id="playerExperience"></span></p>
 					<button id="knife" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="slap">Knife</button>
-					<button id="sword" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="punch" disabled="true">Sword</button>
-					<button id="armor" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="armor" disabled="true">Armor</button>
+					<button id="sword" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="punch">Sword</button>
+					<button id="armor" class="btn bg-dark btn-sm text-white mt-2" type="button" data-upgrade="armor">Armor</button>
 				</div>
 			</div>
 		</div>
 	</main>
-	<footer class="row my-3">
+	<footer class="row py-3 mt-3">
 		<div class="col d-flex justify-content-between">
 			<p>games: <span id="games">0</span></p>
 			<p>wins: <span id="wins">0</span></p>
