display hit value

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 		<div class="col d-flex justify-content-between">
 			<p>games: <span id="games">0</span></p>
 			<p>wins: <span id="wins">0</span></p>
+			<p>last hit: <span id="lastHitValue">0</span></p>
 			<button id="reset" type="button" class=" btn btn-sm bg-dark text-white">Reset</button>
 		</div>
 	</footer>
